--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <!-- Misc -->
     <lombok.version>1.18.26</lombok.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
+    <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 
     <!-- Tests -->
     <assertj-core.version>3.24.2</assertj-core.version>
@@ -135,10 +136,24 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <version>${jakarta.validation-api.version}</version>
+    </dependency>
 
+    <!-- Quarkus -->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-validator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-narayana-jta</artifactId>
     </dependency>
 
     <!-- Tests -->
