--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -19,7 +19,12 @@
 
   <modules />
 
-  <dependencies />
+  <dependencies>
+    <dependency>
+      <groupId>io.gbloch.meal</groupId>
+      <artifactId>common</artifactId>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
