feat(debezium): add debesium support

--- a/common/src/main/resources/application.properties
+++ b/common/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.debezium-outbox.remove-after-insert=false
-quarkus.debezium-outbox.table-name=CUSTOMERS_OUTBOX_EVENTS
+quarkus.datasource.devservices.command=postgres -c wal_level=logical
+debezium.plugin.name=pgoutput
